@@ -7,6 +7,7 @@
 - allow submitting many packages at once, even without support on server
   side (the same behavior as running repsys submit for each package)
 - append a parameter sid=UUID for every set of packages submitted
+- strip username from package URL on submit
 
 * 1.7
 - dropped all authenticated access support: subversion authentication has
